fixed header size on small devices, and font size

--- a/django_ters/static/styles-sass/index-styles.scss
+++ b/django_ters/static/styles-sass/index-styles.scss
@@ -11,6 +11,10 @@
   z-index: -10;
   overflow: hidden;
 
+  @media screen and (width < 1000px) {
+    top: calc($header-height / 1.5);
+  }
+
   img {
     width: 100%;
     max-width: 100%;
@@ -33,16 +37,6 @@
   }
 }
 
-@media screen and (width < 1000px) {
-  .main-collection {
-    height: 50vh;
-  }
-
-  .main-content {
-    margin-top: 40vh;
-  }
-}
-
 .main-collection-info {
   width: 100%;
   height: $header-height;
@@ -51,6 +45,20 @@
 
   .left-side {
     height: 50px;
+  }
+}
+
+@media screen and (width < 1000px) {
+  .main-collection {
+    height: 50vh;
+  }
+
+  .main-content {
+    margin-top: 40vh;
+  }
+
+  .main-collection-info {
+    padding-top: 0;
   }
 }
 
@@ -126,7 +134,7 @@
   margin: 5%;
 
   .name {
-    font-size: clamp(1.2rem, 1.7vw, 1.5rem);
+    font-size: clamp(0.9rem, 1.5vw, 1.5rem);
     font-weight: 500;
     text-transform: uppercase;
     @media screen and (max-width: 600px) {
@@ -135,7 +143,7 @@
   }
 
   .categoty {
-    font-size: clamp(0.9rem, 1.2vw, 1rem);
+    font-size: clamp(0.6rem, 1.5vw, 1rem);
     opacity: 80%;
     text-transform: uppercase;
   }
