--- a/django_ters/static/styles-sass/products-styles.scss
+++ b/django_ters/static/styles-sass/products-styles.scss
@@ -43,6 +43,7 @@
   position: relative;
   padding-left: $default-side-spacing;
   overflow: hidden;
+  color: black;
 }
 
 .dropbtn::after {
@@ -168,7 +169,7 @@ input[type='checkbox']:checked::before {
   @include center();
   padding: $header-height * 0.5 $default-side-spacing * 3;
   @media screen and (width < 1000px) {
-    padding: $header-height * 0.5 calc($default-side-spacing / 2);
+    padding: 2rem calc($default-side-spacing / 2) $header-height * 0.5;
   }
   max-width: 100%;
 }
@@ -209,13 +210,13 @@ input[type='checkbox']:checked::before {
     opacity: 0.5;
     @include center();
     text-transform: uppercase;
-    font-size: 0.8rem;
-    padding-top: calc($default-side-spacing / 6);
+    font-size: clamp(0.6rem, 1.3vw, 0.8rem);
+    padding-top: 0.13rem;
   }
 
   .product-name {
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: clamp(0.8rem, 1.5vw, 1.1rem);
     text-transform: uppercase;
     text-align: center;
   }
@@ -223,6 +224,7 @@ input[type='checkbox']:checked::before {
 
 .product-price {
   font-weight: 600;
+  font-size: clamp(0.9rem, 1.5vw, 1.3rem);
   padding-top: calc($default-side-spacing / 2);
 }
 
