--- a/public_html/static/styles-sass/index-styles.scss
+++ b/public_html/static/styles-sass/index-styles.scss
@@ -11,6 +11,10 @@
   z-index: -10;
   overflow: hidden;
 
+  @media screen and (width < 1000px) {
+    top: calc($header-height / 1.5);
+  }
+
   img {
     width: 100%;
     max-width: 100%;
@@ -126,7 +130,7 @@
   margin: 5%;
 
   .name {
-    font-size: clamp(1.2rem, 1.7vw, 1.5rem);
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
     font-weight: 500;
     text-transform: uppercase;
     @media screen and (max-width: 600px) {
@@ -135,7 +139,7 @@
   }
 
   .categoty {
-    font-size: clamp(0.9rem, 1.2vw, 1rem);
+    font-size: clamp(0.7rem, 1.5vw, 1rem);
     opacity: 80%;
     text-transform: uppercase;
   }
